<resources>
    <string name="app_name" translatable="false">Train Live Location</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Wellcome_back">Wellcome back!</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forget_password"><u>Forger Password?</u></string>
    <string name="signIn"><u>Sign In?</u></string>
    <string name="sign_in_without_underScore">Sign In</string>
    <string name="sign_up"><u>Sign Up?</u></string>
    <string name="submit"><u>submit?</u></string>
    <string name="sending_code">Sending Code…</string>
    <string name="post_repot">Report</string>
    <string name="CriticalPosts">Critical Posts page</string>
    <string name="NoneCriticalPosts">None Critical Posts page</string>
    <string name="verification_done">verification done…</string>
    <array name="jopsArray">
        <item>Doctor</item>
        <item>Engineer</item>
        <item>Police</item>
        <item>Teacher</item>
        <item>Farmer</item>
        <item>Software Engineer</item>
    </array>

    <string name="title_activity_splash_new_ui">splash</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next"><u>Next</u></string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="profile_name">Profile Name</string>
    <string name="features1">Track train live</string>
    <string name="features2">Notify you before arriving to your station</string>
    <string name="profile_jop">Profile Jop</string>
    <string name="profile">Profile</string>
    <string name="security">Security</string>
    <string name="contact_us">Contact Us</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="help">Help</string>
    <string name="notification">Notification</string>
    <string name="location">Location</string>
    <string name="passengers">Passengers</string>
    <string name="posts">Posts</string>
    <string name="tickets">Tickets</string>
    <string name="chat">Chat</string>
    <string name="abbreviations">abbreviations</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="post_profile_name">profile name</string>
    <string name="post_time">post time</string>
    <string name="train_id_">train id</string>
    <string name="_356_">356</string>
    <string name="comments">Comments</string>
    <string name="post_Likes">post Likes</string>
    <string name="post_content">Post Content</string>
    <string name="add_critical_post_content">critical post</string>
    <string name="add_non_critical_post_content">non critical post</string>
    <string name="add_post_submit">Submit</string>
    <string name="critcal">critcal</string>
    <string name="nonCritcal">nonCritcal</string>
    <string name="share_location_para">Thank you for sharing your location. This helps us to provide a better service to assist passengers who are waiting for the train at different stations to know the location of the train. We wish you a happy trip</string>
    <string name="please_wait">Please Wait...</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="para_empty_post">If you have something missing go to add post page and publish it now</string>
    <string name="para_empty_post2">No Posts Published on This Train</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="emergancy">Emergancy</string>

    <string name="train_id">Train Id</string>
    <string name="_356">356</string>
    <string name="post_publish_failed">Post Publish Failed</string>
    <string name="post_publish_successfully">post publish successfully</string>
    <string name="location_shared_successfully">location shared successfully</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="please_choose_operation">الرجاء اختيار العملية …</string>
    <string name="if_you_choose_to_track_location_you_will_be_you_will_be_able_to_track_train_location_but_if_you_choose_to_share_location_your_location_will_be_shared_as_train_location">
    if you choose to track location you will be you will be able to track train location but if you choose to share location your location will be shared as train location</string>
    <string name="track_location">Location Track</string>
    <string name="share_location">Location Share</string>
    <string name="write_a_comment">Write Comment</string>
    <string name="submit_">submit</string>
    <string name="please_wait_">please wait</string>
    <string name="send_code">send code</string>
    <string name="phone_">phone</string>

    <string name="online">online</string>
    <string name="message">message</string>
    <string name="are_you_shore_you_want_to_remove_this_post">are you shore you want to remove this post</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="share_location_">Share Location</string>
    <string name="takeoff_station">takeoff station</string>
    <string name="arrival_station">arrival_station</string>
    <string name="train_id___">train id</string>
    <string name="track_location_">track location</string>
    <string name="train_distance">train distance</string>
    <string name="_5_km">5 km</string>
    <string name="address">address</string>
    <string name="shamma_ashmoun_menofia">shamma ashmoun menofia</string>
    <string name="profile_name_">profile name</string>
    <string name="profile_jop_">profile jop</string>
    <string name="profile_name__">profile name</string>
    <string name="profile_comment">profile comment</string>
    <string name="text_title">text title</string>
    <string name="ali_tahoon">ali tahoon</string>
    <string name="text_title_">text title</string>
    <string name="convenient_with_new_technological_innovations_human_beings_have_become_more_dependent_on_science_and_technology_we_rely_on_technology_for_all_our_activities_and_have_become_an_integral_part_of_our_lives">convenient. With new technological innovations, human beings have become more dependent on science and technology. We rely on technology for all our activities, and have become an integral part of our lives</string>
    <string name="ok_">ok</string>
    <string name="find_station">find station</string>
    <string name="find_train_by_id">find train by id</string>
    <string name="train_degree">train degree</string>
    <string name="train_number">train number</string>
    <string name="_80_km">80 KM</string>
    <string name="choose_train_to_track">Choose Train To Track</string>
    <string name="Alarms">Alarms</string>
</resources>