<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu_profile"
        android:icon="@drawable/profile_image"
        android:title="@string/profile"/>
    <item
        android:id="@+id/home_menu_security"
        android:icon="@drawable/security_icon"
        android:title="@string/security"/>
    <item
        android:id="@+id/home_menu_contact_us"
        android:icon="@drawable/contact_icon"
        android:title="@string/contact_us"/>
    <item
        android:id="@+id/home_menu_invite_friend"
        android:icon="@drawable/invite_icon"
        android:title="@string/invite_friend"/>
    <item
        android:id="@+id/home_menu_help"
        android:icon="@drawable/help_icon"
        android:title="@string/help"/>
</menu>