<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:backgroundTint="@color/DarkPrimaryColor"
        android:layout_marginBottom="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_10sdp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginHorizontal="@dimen/_5sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/post_rcv_item_profile_img"
                    android:layout_width="@dimen/_50sdp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="@dimen/_1sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/account_circle_150" />

                <TextView
                    android:id="@+id/post_rcv_item_txt_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/post_rcv_item_profile_img"
                    android:text="@string/post_profile_name"
                    android:textColor="@color/white" />


                <ImageView
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/post_rcv_item_more_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/post_rcv_item_close_icon"
                    app:srcCompat="@drawable/more_icon" />

                <ImageView
                    android:id="@+id/post_rcv_item_close_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/close_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="@dimen/_5sdp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="convenient. With new technological innovations, human beings have become more dependent on science and technology. We rely on technology for all our activities, and have become an integral part of our lives"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:gravity="start" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                app:srcCompat="@drawable/train"
                android:layout_marginVertical="@dimen/_5sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/white"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_5sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp">

                <TextView
                    android:gravity="center|start"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/comments"
                    android:text="@string/comments"
                    android:textColor="@color/white"
                    android:drawablePadding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                     />

                <TextView
                    android:drawablePadding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:drawableLeft="@drawable/time"
                    android:gravity="center|start"
                    android:id="@+id/post_rcv_item_txt_profile_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_time"
                    android:textColor="@color/white" />

                <TextView
                    android:drawablePadding="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:drawableLeft="@drawable/report_icon"
                    android:gravity="center|start"
                    android:id="@+id/post_rcv_item_txt_profile_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_repot"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>
</layout>