<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="viewmodel"
            type="com.example.trainlivelocation.ui.SignInViewModel" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            tools:context=".ui.signIn"
            android:layout_height="match_parent"
            android:background="@drawable/splash_fragment_background"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/signin_txt_email"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:layout_marginStart="49dp"
                android:layout_marginEnd="49dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.233"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:boxStrokeColor="@color/basicColor"
                app:boxStrokeWidth="1dp"
                android:textColorHint="@color/textHintColorFirst">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"

                    android:background="@drawable/login_textfield_selector"
                    android:drawableStart="@drawable/phone_icon"
                    android:drawablePadding="5dp"
                    android:hint="@string/phone"
                    android:text="@={viewmodel.userPhone}"
                    android:textColor="@color/textAlarmColor"
                    android:textColorHint="@color/fourth"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <!--            <LinearLayout-->
<!--                android:id="@+id/linearLayout6"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal"-->
<!--                android:paddingVertical="20dp"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/linearLayout4"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.0"-->
<!--                app:layout_constraintStart_toStartOf="parent">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/signIn"-->
<!--                    android:textAllCaps="true"-->
<!--                    android:textColor="@color/headline_color"-->
<!--                    android:textSize="18sp" />-->

<!--                <ImageView-->
<!--                    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="0.0"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    android:id="@+id/sign_btn_sign_in"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginHorizontal="50dp"-->
<!--                    android:background="@drawable/signin_fragment_btn_shape"-->
<!--                    android:onClick="@{ viewmodel::onLoginButtonClick}"-->
<!--                    android:src="@drawable/arrow_left_icon" />-->

<!--            </LinearLayout>-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signin_txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="24dp"
                android:layout_marginStart="49dp"
                android:layout_marginEnd="49dp"
                app:boxStrokeColor="@color/basicColor"
                app:boxStrokeWidth="1dp"
                android:layout_marginBottom="560dp"
                android:textColorHint="@color/textHintColorFirst"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_txt_email"
                app:layout_constraintVertical_bias="0.0"
                app:passwordToggleDrawable="@drawable/txt_password_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/basicColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.userPassword}"
                    android:textColor="@color/textAlarmColor"
                    android:textColorHint="@color/fourth" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="12dp"
                android:text="@string/forget_password"
                android:textAllCaps="true"
                android:textColor="@color/basicColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/signin_txt_password"
                app:layout_constraintHorizontal_bias="0.938"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signin_txt_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_btn_sign_in"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cornerRadius="30dp"
                android:textSize="16sp"
                android:padding="15dp"
                android:backgroundTint="@color/btn_background"
                android:text="@string/sign_in_without_underScore"
                android:textColor="@color/white"
                android:onClick="@{ viewmodel::onLoginButtonClick}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_btn_sign_in">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="Don't have account ?"
                    android:textColor="@color/textHintColorSecond"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:onClick="@{viewmodel::onSignUpBtnClicked}"
                    android:text="@string/sign_up"
                    android:textColor="@color/basicColor"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
